PZ-28, PZ-32 | Assembly OS X: + Shell script + File associations + Libs + Added icon resource
PZ-26 | Minor changes:
+ Alert boxes always shown on top
+ Updated App URL
+ Updated License display and processing to work with JRT and holds url info
+ JRT used to retrieve log4j configuration and reserved-keys
+ Properties updates:
   - Pre-alpha specified
   - New logging fields
   - Updated label names
   - Added reserved keys

Environment changes:
+ Log configuration update
+ Added initial functionality to listen to OS open calls (For finder open with… incomplete)
+ Added Seven Zip J Binding dependency
+ Git ignore - Build directories, compressed log files added

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -44,6 +44,10 @@ logging.com.ntak.pearl-zip.license.issue-parse-license-file=Issue parsing licens
 logging.com.ntak.pearl-zip.license.skipping-dependency-license-retrieval=Skipping generation of dependency: %s. Exception type: %s; message: %s
 logging.com.ntak.pearl-zip.license.added-license-declaration=\nAdded license declaration. Details:\nUnique Id: %s\nVersion: %s\nLicense Name: %s\nLicense File: %s\n
 
+logging.ntak.pearl-zip.license.license-file-info=License file URI: %s; Exists: %s
+
+logging.ntak.pearl-zip.os-trigger-detected=OS Trigger detected...
+
 ###################################################################################################
 ######################################## TITLE TEXT KEYS ##########################################
 ###################################################################################################
@@ -204,24 +208,24 @@ new.description.text=Basic options for creating an archive are listed below. Pre
 progress.title.text=Processing archive
 progress.default-loading.text=Loading...
 
-main.new.text=_New
-main.open.text=_Open
-main.add.text=_Add
+main.new.text=New
+main.open.text=Open
+main.add.text=Add
 main.add.file.text=Add File
 main.add.dir.text=Add Directory
-main.extract.text=E_xtract
+main.extract.text=Extract
 main.extract.all.text=Extract All
 main.extract.item.text=Extract Selected Item
-main.test.text=_Test
-main.copy.text=_Copy
+main.test.text=Test
+main.copy.text=Copy
 main.copy.item.text=Copy Selected
 main.copy.cancel.text=Cancel
-main.move.text=_Move
+main.move.text=Move
 main.move.item.text=Move Selected
 main.move.cancel.text=Cancel
-main.delete.text=_Delete
-main.info.text=_Info
-main.up.text=_Up
+main.delete.text=Delete
+main.info.text=Info
+main.up.text=Up
 main.file-content-view.name.text=Name
 main.file-content-view.size.text=Size
 main.file-content-view.packedSize.text=Packed Size
@@ -258,13 +262,13 @@ about.copyright.text=:: COPYRIGHT ::
 about.weblink.text=:: WEB LINK ::
 
 sysmenu.file.text=File
-sysmenu.file.new.text=_New
-sysmenu.open.text=_Open
-sysmenu.recent.text=Open _Recent
-sysmenu.file.save-as.text=_Save As...
-sysmenu.file.close.text=_Close
+sysmenu.file.new.text=New
+sysmenu.open.text=Open
+sysmenu.recent.text=Open Recent
+sysmenu.file.save-as.text=Save As...
+sysmenu.file.close.text=Close
 sysmenu.tools.text=Tools
-sysmenu.tools.options.text=O_ptions
+sysmenu.tools.options.text=Options
 
 options.general.text=General
 options.general.btnClearCache.text=Clear Cache
