PZ-23, PZ-28 | License mechanism; Mac native binary | Added BSD 3-Clause license to all maven modules; Corrected issues with automatic generation of native mac app, Process fork mode set to allow context in child shell processes within java

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -1,6 +1,6 @@
-# Copyright (c) 2021 92AK
-# PearlZip Language Pack: EN GB
-# By Aashutos Kakshepati
+#
+# Copyright (c) ${YEAR} 92AK
+#
 
 ###################################################################################################
 ######################################## LOGGING TEXT KEYS ########################################
@@ -254,7 +254,7 @@ file-info.ownership.group.text=Group:
 file-info.other.text=Other
 file-info.btnClose.text=Close
 
-about.description.text=Free Opensource software. Click dialog to close.
+about.description.text=BSD 3-Clause Open-source Licensed Software. Click dialog to close.
 about.btnLicenseInfo.text=License Information
 about.app-name.text=:: APP NAME ::
 about.version.text=:: VERSION ::
