PZ-21,PZ-28,PZ-38,PZ-39,PZ-41,PZ-42,PZ-43,PZ-44 | Disable appropriate options in compressor archives within context menu, Apple Native Build process, Open/Save edit issue with compressor archives, Compressor nested file reintegration, compressor archive issues in native binary, Issue with bz2 archives, Bring new archive windows to the front, Correct clear cache issue | Details below:
PZ-21:
+ Updated controller for archive context menu to enable certain options when not in a compressor archive.

PZ-28:
+ Updated build-pz-osx.sh to be more consistent and sort out some dependency based issues with the reserved-keys file.
+ Added build.sh and gen.sh for reference.
+ Updated maven module pearl-zip-language-pack-en-GB to pearl-zip-lang-pack-en-GB.

PZ-38,PZ-41:
+ Updated Apache Commons Compress uses mondule-info declaration to work with ServiceLoader scans in module.
+ Reordered JarArchiveEntry configuration setup to occur before more generic ZipArchiveEntry.

PZ-39:
+ Added extra option on the On Close Handler to reintegrate nested archive with parent compressor.

PZ-43:
+ Ordering to bring nested objects and new archive screens to the front for New, row-click and Open Event Handlers.

PZ-44:
+ Corrected active migrations pre-condition to clearing caches.

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -48,6 +48,10 @@ logging.ntak.pearl-zip.license.license-file-info=License file URI: %s; Exists: %
 
 logging.ntak.pearl-zip.os-trigger-detected=OS Trigger detected...
 
+logging.ntak.pearl-zip.issue-integrating-changes=Issue adding entries to archive or creating archive %s. Message: %s
+
+logging.ntak.pearl-zip.log-create-archive=Creating file: %s
+
 ###################################################################################################
 ######################################## TITLE TEXT KEYS ##########################################
 ###################################################################################################
@@ -101,6 +105,10 @@ body.ntak.pearl-zip.err-open-nested-tarball=An issue occurred on loading tar fil
 title.ntak.pearl-zip.confirm-save-archive=Confirmation: Save temporary archive before exit
 header.ntak.pearl-zip.confirm-save-archive=Do you wish to save the open archive %s
 body.ntak.pearl-zip.confirm-save-archive=Please specify if you wish to save the archive %s. If you do not wish to save the archive, it will be removed from temporary storage.
+
+title.ntak.pearl-zip.confirm-save-nested-archive=Confirmation: Reintegrate archive changes in parent archive
+header.ntak.pearl-zip.confirm-save-nested-archive=Do you wish to reintegrate the nested archive changes into %s
+body.ntak.pearl-zip.confirm-save-nested-archive=Please specify if you wish to persist the changes of the nested archive %s into %s.
 
 title.ntak.pearl-zip.test-archive-success=Test successful
 header.ntak.pearl-zip.test-archive-success=Successful test of archive %s
