PZ-49 | Add log key logging.ntak.pearl-zip.archive-service.listing.exception (en-GB lang pack) | Added to properties file

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -52,6 +52,8 @@ logging.ntak.pearl-zip.issue-integrating-changes=Issue adding entries to archive
 
 logging.ntak.pearl-zip.log-create-archive=Creating file: %s
 
+logging.ntak.pearl-zip.archive-service.listing.exception=%s on listing contents. Message: %s
+
 ###################################################################################################
 ######################################## TITLE TEXT KEYS ##########################################
 ###################################################################################################
