PZ-63 | Zip archive functionality warning display updat (Write Service) | Added warning for Add directory and added no write service available reason when performing a migration function when no Archive Write Service is available for the format

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -146,11 +146,11 @@ body.ntak.pearl-zip.err-open-file=An issue occurred when trying to open file %s.
 
 title.ntak.pearl-zip.cannot-init-move=Warning: Cannot initiate move
 header.ntak.pearl-zip.cannot-init-move=Move is not possible
-body.ntak.pearl-zip.cannot-init-move=Move could not be initiated for one of the following reasons:\n\t\u2022 No item has been selected to move.\n\t\u2022 The archive is a compressor archive and so move is unsupported.\n\t\u2022 Migration is in COPY mode.\n\t\u2022 The selected item is a folder.
+body.ntak.pearl-zip.cannot-init-move=Move could not be initiated for one of the following reasons:\n\t\u2022 No item has been selected to move.\n\t\u2022 The archive is a compressor archive and so move is unsupported.\n\t\u2022 Migration is in COPY mode.\n\t\u2022 The selected item is a folder.\n\t\u2022 Archive write functionality is not supported by any providers discovered by the application.
 
 title.ntak.pearl-zip.cannot-init-copy=Warning: Cannot initiate copy
 header.ntak.pearl-zip.cannot-init-copy=Copy is not possible
-body.ntak.pearl-zip.cannot-init-copy=Copy could not be initiated for one of the following reasons:\n\t\u2022 No item has been selected to copy.\n\t\u2022 The archive is a compressor archive and so copy is unsupported.\n\t\u2022 Migration is in MOVE mode.\n\t\u2022 The selected item is a folder.
+body.ntak.pearl-zip.cannot-init-copy=Copy could not be initiated for one of the following reasons:\n\t\u2022 No item has been selected to copy.\n\t\u2022 The archive is a compressor archive and so copy is unsupported.\n\t\u2022 Migration is in MOVE mode.\n\t\u2022 The selected item is a folder.\n\t\u2022 Archive write functionality is not supported by any providers discovered by the application.
 
 title.ntak.pearl-zip.file-not-exist=Warning: File does not exist
 header.ntak.pearl-zip.file-not-exist=The selected file does not exist
