PZ-109, PZ-118 | TextFX Framework; Test archive TestFX + Updated test archive dialog text + Add test utility method + Add test resources + Implementation of TestFX Unit Test
Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -114,11 +114,11 @@ body.ntak.pearl-zip.confirm-save-nested-archive=Please specify if you wish to pe
 
 title.ntak.pearl-zip.test-archive-success=Test successful
 header.ntak.pearl-zip.test-archive-success=Successful test of archive %s
-body.ntak.pearl-zip.test-archive-success=Parsed of Zip file %s successfully
+body.ntak.pearl-zip.test-archive-success=Parsed archive %s successfully
 
 title.ntak.pearl-zip.test-archive-failure=Test failure
 header.ntak.pearl-zip.test-archive-failure=Unsuccessful test of archive %s
-body.ntak.pearl-zip.test-archive-failure=Parsing of Zip file %s failed. Check log output for more information.
+body.ntak.pearl-zip.test-archive-failure=Parsing of archive file %s failed. Check log output for more information.
 
 title.ntak.pearl-zip.issue-delete-file=Error: Issue deleting file from archive
 header.ntak.pearl-zip.issue-delete-file=File could not be removed from the archive
