PZ-101, PZ-106, PZ-124 | Copying/Moving files into an empty directory should be possible; Right-click functionality outside of an archive entry should yield certain general archive functionality; Add empty directory should be possible + Implemented functionality to allow addition of folder zip entries + Implemented functionality to spawn context menu in archive viewer outside of row selection + Updated/Implemented TestFX unit tests + Updated/Implemented required TestFX utility methods
Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -301,6 +301,12 @@ ctxMenu.copy.text=Copy
 ctxMenu.move.text=Move
 ctxMenu.info.text=File Info
 ctxMenu.delete.text=Delete
+
+tblCtxMenu.paste.text=Paste
+tblCtxMenu.drop.text=Drop
+tblCtxMenu.add-file.text=Add File
+tblCtxMenu.add-dir.text=Add Directory
+
 license.tblLicenseInfo.canonicalName.text=Canonical Name
 license.tblLicenseInfo.version.text=Version
 license.tblLicenseInfo.licenseType.text=License Type
