PZ-47, PZ-126 | File existence checks prior to any archive process (Fast fail); Convert AtomicBoolean to CountDownLatch for thread blocking in Drag & Drop Event Handler
PZ-47:
+ Added labels and log patterns to the en-GB language pack
+ Created ChangeEventHandler convenience class and AlertException to streamline the alert raising process to the end-user.
+ Modified the following event handlers to use the newly made convenience Event Handler:
  - BtnAddDirEventHandler
  - BtnAddFileEventHandler
  - BtnCopySelectedEventHandler
  - BtnMoveSelectedEventHandler
  - BtnDeleteEventHandler
  - BtnExtractAllEventHandler
  - BtnExtractFileEventHandler
  - BtnTestEventHandler
  - FileContentsDragDropRowEventHandler
+ Implemented bypass close prompt for error case in ConfirmCloseEventHandler

PZ-126:
+ FileContentsDragDropRowEventHandler - Utilised latch instead of AtomicBoolean to denote a more clear thread blocking process

Auxiliary tasks:
+ Made author javadoc consistent.

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -54,6 +54,8 @@ logging.ntak.pearl-zip.log-create-archive=Creating file: %s
 
 logging.ntak.pearl-zip.archive-service.listing.exception=%s on listing contents. Message: %s
 
+logging.ntak.pearl-zip.general-event-handler-exception=Event handler %s threw Exception of type %s with message %s\nStack trace:\n%s
+
 ###################################################################################################
 ######################################## TITLE TEXT KEYS ##########################################
 ###################################################################################################
@@ -144,10 +146,12 @@ title.ntak.pearl-zip.err-open-file=Error: Issue opening file
 header.ntak.pearl-zip.err-open-file=Could not open the selected file externally
 body.ntak.pearl-zip.err-open-file=An issue occurred when trying to open file %s.
 
+logging.ntak.pearl-zip.cannot-init-move=Move could not be initiated for file %s
 title.ntak.pearl-zip.cannot-init-move=Warning: Cannot initiate move
 header.ntak.pearl-zip.cannot-init-move=Move is not possible
 body.ntak.pearl-zip.cannot-init-move=Move could not be initiated for one of the following reasons:\n\t\u2022 No item has been selected to move.\n\t\u2022 The archive is a compressor archive and so move is unsupported.\n\t\u2022 Migration is in COPY mode.\n\t\u2022 The selected item is a folder.\n\t\u2022 Archive write functionality is not supported by any providers discovered by the application.
 
+logging.ntak.pearl-zip.cannot-init-copy=Copy could not be initiated for file %s
 title.ntak.pearl-zip.cannot-init-copy=Warning: Cannot initiate copy
 header.ntak.pearl-zip.cannot-init-copy=Copy is not possible
 body.ntak.pearl-zip.cannot-init-copy=Copy could not be initiated for one of the following reasons:\n\t\u2022 No item has been selected to copy.\n\t\u2022 The archive is a compressor archive and so copy is unsupported.\n\t\u2022 Migration is in MOVE mode.\n\t\u2022 The selected item is a folder.\n\t\u2022 Archive write functionality is not supported by any providers discovered by the application.
@@ -178,6 +182,16 @@ logging.ntak.pearl-zip.paste-exception=LOG: Issue occurred on pasting migration 
 title.ntak.pearl-zip.paste-exception=ERROR: Issue occurred on migration
 header.ntak.pearl-zip.paste-exception=There was while performing migration
 body.ntak.pearl-zip.paste-exception=Upon initiating function '%s', an issue occurred on attempting the migration. Migration has been cancelled.
+
+logging.ntak.pearl-zip.archive-locked=Archive %s is locked and cannot be accessed.
+title.ntak.pearl-zip.archive-locked=ERROR: Archive Locked
+header.ntak.pearl-zip.archive-locked=Cannot process archive
+body.ntak.pearl-zip.archive-locked=Archive %s is locked by another process. PearlZip will now close the instance.
+
+logging.ntak.pearl-zip.archive-does-not-exist=Archive %s does not exist.
+title.ntak.pearl-zip.archive-does-not-exist=ERROR: Archive not present
+header.ntak.pearl-zip.archive-does-not-exist=Cannot process archive
+body.ntak.pearl-zip.archive-does-not-exist=Archive %s does not exist. PearlZip will now close the instance.
 
 ###################################################################################################
 ######################################## LABEL TEXT KEYS ##########################################
