PZ-103 | Dynamic Module Loading Support Implemented module scanning for PearlZip
Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -56,6 +56,10 @@ logging.ntak.pearl-zip.archive-service.listing.exception=%s on listing contents.
 
 logging.ntak.pearl-zip.general-event-handler-exception=Event handler %s threw Exception of type %s with message %s\nStack trace:\n%s
 
+logging.ntak.pearl-zip.loading-module=Loading modules from path: %s
+logging.ntak.pearl-zip.read-services-identified=ArchiveReadService implementation identified: %s
+logging.ntak.pearl-zip.write-services-identified=ArchiveWriteService implementation identified: %s
+
 ###################################################################################################
 ######################################## TITLE TEXT KEYS ##########################################
 ###################################################################################################
