PZ-127 | Remove EventBus dependency Implemented a facade over the EventBus implementation to remove hard dependency on non-java 9+ code for the pearl-zip-archive module. This will enable reuse of the library more straight forward in terms of Maven requirements for good, shareable Maven modules.
Changes made:
+ ArchiveService searches an initializes the required communication bus based on configured factory that is passed in
+ Created CommunicationBus and CommunicationBusFactory to provide facade overlay for the event bus implementation
+ Removed eventbus module as a dependency on archive library module as well as Apache Commons Compress, 7-Zip JBinding implementations
+ Moved DEFAULT_LOGGER to archive library module for wider usage
+ Implemented EventBusFactory to generate an EventBus implementation of CommunicationBus for use throughout the PearlZip application

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -60,6 +60,8 @@ logging.ntak.pearl-zip.loading-module=Loading modules from path: %s
 logging.ntak.pearl-zip.read-services-identified=ArchiveReadService implementation identified: %s
 logging.ntak.pearl-zip.write-services-identified=ArchiveWriteService implementation identified: %s
 
+logging.ntak.pearl-zip.archive-service.com-bus-init-error=Exception raised on initialisation of Communication Bus. A critical issue has occurred, Pearlzip will now close.\nException Type: %s\nException message: %s\nStack trace:\n%s
+
 ###################################################################################################
 ######################################## TITLE TEXT KEYS ##########################################
 ###################################################################################################
