PZ-104,PZ-108,PZ-128 | Configurable New Archive By Provider and Archive Format; Zip4J Archive Provider Implementation; Utilise ArchiveInfo in endpoint calls instead of String Path
PZ-128:
+ Added endpoint to read archive metadata
+ Changed the following controllers/Utility classes to consume ArchiveInfo instead of String Archive path to ensure the permeability of archive options
  - BtnAddDirEventHandler
  - BtnAddFileEventHandler
  - BtnCopySelectedEventHandler
  - BtnDeleteEventHandler
  - BtnExtractFileEventhANDLER
  - BtnMoveSelectedEventHandler
  - FileContentsDragDropRowEventHandler
  - FileInfoRowEventHandler
  - ArchiveUtil
+ Added ArchiveInfo object to FXArchiveInfo for ease of use throughout the application
+ Synchronised access to the files representation in FXArchiveInfo at the instance level

PZ-108:
+ FrmZip4jNewOptionsController - Implemented controller for setting up ArchiveInfo for use with compression of a zip archive using the Zip4j library
+ Zip4jArchiveReadService - Made changes to handle folder as expected by PearlZip
+ Zip4jArchiveWriteService - Made changes to handle implied root level folder deletion
+ Zip4jUtil - Updated utility method to take advantage of Generic typing methods in ArchiveInfo
+ Factored in control requirements and dependencies for the Zip4j plugin
+ UI Design for Zip4j New Options tab

PZ-104:
+ FrmNewController - Added Modular structure to New Window with dynamic loading of plugin option tabs
+ BtnCreateEventHandler - Keep New window screen to the front to ensure that if we cancel the save as dialog Create can still be re-initiated easily
+ Updated New Dialog UI as necessary to facilitate modular New options tabs

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -232,7 +232,7 @@ label.ntak.pearl-zip.clear-up-recents=Clearing up recently open files...
 new.btnCreate.text=Create
 new.btnCancel.text=Cancel
 new.cmp-format.text=Compression format:
-new.cmp-level.text=Compression level:
+new.tabs.general.text=General
 new.description.text=Basic options for creating an archive are listed below. Press create to choose a location to save your archive:
 
 progress.title.text=Processing archive
