PZ-108,PZ-131 | Zip4J Archive Provider Implementation; Configurable Open archive dialog on an archive provider basis
PZ-131:
+ Zip4j implemented pre-open password dialog on opening an encrypted zip archive
+ Updated BtnOpenEventHandler, ArchiveUtil to factor in the optional pre-open dialog
+ Added logging keys and en-GB log patterns
+ Added test case showing encrypted archive metadata is still readable

PZ-108:

Other:
+ Optimised Apache Commons implementation stream

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-archive-zip4j/src/main/resources/zip4j_plugin_en_GB.properties
+++ b/pearl-zip-archive-zip4j/src/main/resources/zip4j_plugin_en_GB.properties
@@ -10,8 +10,13 @@ logging.ntak.pearl-zip.zip4j.adding-file=Adding file %s...
 logging.ntak.pearl-zip.zip4j.issue-adding-file=Issue adding to zip archive.\nException thrown: %s\nException message: %s\nStack trace:\n%s
 logging.ntak.pearl-zip.zip4j.deleting-file=Deleting file %s...
 logging.ntak.pearl-zip.zip4j.issue-deleting-file=Issue deleting from zip archive.\nException thrown: %s\nException message: %s\nStack trace:\n%s
+logging.ntak.pearl-zip.zip4j.issue-extracting-file=Issue extracting from zip archive.\nException thrown: %s\nException message: %s\nStack trace:\n%s
 logging.ntak.pearl-zip.zip4j.issue-creating-archive=Issue creating zip archive.\nException thrown: %s\nException message: %s\nStack trace:\n%s
 logging.ntak.pearl-zip.zip4j.issue-generating-metadata=Issue generating metadata for archive %s
+
+logging.ntak.pearl-zip.zip4j.password-success=Success
+logging.ntak.pearl-zip.zip4j.password-fail=Password invalid
+
 
 ###################################################################################################
 ######################################## NEW OPTIONS FORM LABELS ##################################
@@ -26,3 +31,10 @@ zip4j.new.options.encryption.password.text=Password:
 zip4j.new.options.encryption.algorithm.text=Encryption Algorithm: 
 zip4j.new.options.encryption.strength.text=Encryption Strength: 
 zip4j.new.options.description.text=The below options will help to configure Zip4j parameters when creating, augmenting or modifying the archive.
+
+###################################################################################################
+######################################## PASSWORD FORM LABELS ##################################
+###################################################################################################
+
+zip4j.password.description.text=The open archive is an encrypted Zip archive. \nPlease specify the password in order to decrypt and read the contents of files within the archive:
+zip4j.password.continue=Continue
