--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -199,6 +199,11 @@ title.ntak.pearl-zip.archive-does-not-exist=ERROR: Archive not present
 header.ntak.pearl-zip.archive-does-not-exist=Cannot process archive
 body.ntak.pearl-zip.archive-does-not-exist=Archive %s does not exist. PearlZip will now close the instance.
 
+logging.ntak.pearl-zip.invalid-archive-setup=Issue occurred when opening archive %s. Issue reason: %s
+title.ntak.pearl-zip.invalid-archive-setup=Invalid Archive Setup
+header.ntak.pearl-zip.invalid-archive-setup=Archive could not be open
+body.ntak.pearl-zip.invalid-archive-setup=There were issues opening the archive. Reason given by plugin for issue: %s. Check logs for further details.
+
 ###################################################################################################
 ######################################## LABEL TEXT KEYS ##########################################
 ###################################################################################################
