PZ-105,PZ-108 | Configurable Option tabs on an archive provider basis; Zip4J Archive Provider Implementation
PZ-105:
+ Implemented settings system to incorporate settings state from plugins with persistence backing
+ Updated log4j logging configuration

PZ-108:
+ Implemented Options tab for Zip4j implementation

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-archive-zip4j/src/main/resources/zip4j_plugin_en_GB.properties
+++ b/pearl-zip-archive-zip4j/src/main/resources/zip4j_plugin_en_GB.properties
@@ -38,3 +38,6 @@ zip4j.new.options.description.text=The below options will help to configure Zip4
 
 zip4j.password.description.text=The open archive is an encrypted Zip archive. \nPlease specify the password in order to decrypt and read the contents of files within the archive:
 zip4j.password.continue=Continue
+zip4j.options.description.text=Below, options have been presented to configure the Zip4j library within PearlZip.
+zip4j.options.default-compression-level.text=Default Compression Level: 
+zip4j.options.default-compression-method.text=Default Compression Method: 
