PZ-108,PZ-133 | Zip4J Archive Provider Implementation; Error consumer to raise alerts from Archive Service Issues
PZ-108:
+ Made continue default button on password entry screen
+ Compression utilises Settings set for Zip4j

PZ-133:
+ Implemented Error consumer (EventBus subscriber)
+ Registered consumers as part of start up process
+ Raised error messages from Zip4j plugin service as appropriate
+ Refactored ProgressMessage POJO into class from record to take advantage of inheritance to provide ErrorMessage payload functionality
+ Updated logging as appropriate

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -62,6 +62,10 @@ logging.ntak.pearl-zip.write-services-identified=ArchiveWriteService implementat
 
 logging.ntak.pearl-zip.archive-service.com-bus-init-error=Exception raised on initialisation of Communication Bus. A critical issue has occurred, Pearlzip will now close.\nException Type: %s\nException message: %s\nStack trace:\n%s
 
+logging.ntak.pearl-zip.archive-test-failed=Issue observed when trying to test archive %s for integrity
+
+logging.ntak.pearl-zip.invalid-archive-setup=Issue occurred when opening archive %s. Issue reason: %s
+
 ###################################################################################################
 ######################################## TITLE TEXT KEYS ##########################################
 ###################################################################################################
@@ -198,11 +202,6 @@ logging.ntak.pearl-zip.archive-does-not-exist=Archive %s does not exist.
 title.ntak.pearl-zip.archive-does-not-exist=ERROR: Archive not present
 header.ntak.pearl-zip.archive-does-not-exist=Cannot process archive
 body.ntak.pearl-zip.archive-does-not-exist=Archive %s does not exist. PearlZip will now close the instance.
-
-logging.ntak.pearl-zip.invalid-archive-setup=Issue occurred when opening archive %s. Issue reason: %s
-title.ntak.pearl-zip.invalid-archive-setup=Invalid Archive Setup
-header.ntak.pearl-zip.invalid-archive-setup=Archive could not be open
-body.ntak.pearl-zip.invalid-archive-setup=There were issues opening the archive. Reason given by plugin for issue: %s. Check logs for further details.
 
 ###################################################################################################
 ######################################## LABEL TEXT KEYS ##########################################
