PZ-133 | Error consumer to raise alerts from Archive Service Issues
+ Added alert raise logic to the core implementations of PearlZip

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -32,8 +32,6 @@ logging.ntak.pearl-zip.thread-execution-issue=Exception occurred on Thread: %s w
 logging.ntak.pearl-zip.issue-running-background-process=%s thrown running a background process. \nMessage: %s\nStack trace:\n%s
 
 logging.ntak.pearl-zip.acc.init-io-issue=IO Issue occurred on trying to initiate the archive process.\nStack trace:\n%s
-logging.ntak.pearl-zip.acc.delete-file-issue=Issue occurred on deleting file from archive %s.\nException type: %s.\nStack trace:\n%s
-logging.ntak.pearl-zip.acc.add-file-issue=Issue occurred on adding file to archive %s.\nException type: %s.\nStack trace:\n%s
 logging.ntak.pearl-zip.acc.prepare-entry-issue=Issue occurred on preparing archive entry: %s.\nException type: %s.\nStack trace:\n%s
 
 logging.ntak.pearl-zip.acc.event-bus.finishing-process=Finishing process...
@@ -51,8 +49,6 @@ logging.ntak.pearl-zip.os-trigger-detected=OS Trigger detected...
 logging.ntak.pearl-zip.issue-integrating-changes=Issue adding entries to archive or creating archive %s. Message: %s
 
 logging.ntak.pearl-zip.log-create-archive=Creating file: %s
-
-logging.ntak.pearl-zip.archive-service.listing.exception=%s on listing contents. Message: %s
 
 logging.ntak.pearl-zip.general-event-handler-exception=Event handler %s threw Exception of type %s with message %s\nStack trace:\n%s
 
@@ -202,6 +198,33 @@ logging.ntak.pearl-zip.archive-does-not-exist=Archive %s does not exist.
 title.ntak.pearl-zip.archive-does-not-exist=ERROR: Archive not present
 header.ntak.pearl-zip.archive-does-not-exist=Cannot process archive
 body.ntak.pearl-zip.archive-does-not-exist=Archive %s does not exist. PearlZip will now close the instance.
+
+logging.ntak.pearl-zip.archive-service.extract.exception=%s on extracting file(s). Message: %s
+title.ntak.pearl-zip.archive-service.extract.exception=Issue extracting archive
+header.ntak.pearl-zip.archive-service.extract.exception=The archive %s could not be extracted
+body.ntak.pearl-zip.archive-service.extract.exception=Exception %s was thrown on the attempt to extract from the archive. Further details can be found below.
+
+logging.ntak.pearl-zip.archive-service.listing.exception=%s on listing contents. Message: %s
+title.ntak.pearl-zip.archive-service.listing.exception=Issue listing entries from archive
+header.ntak.pearl-zip.archive-service.listing.exception=The archive %s could not be interrogated for contents
+body.ntak.pearl-zip.archive-service.listing.exception=Exception %s was thrown on the attempt to list contents of the archive. Further details can be found below.
+
+logging.ntak.pearl-zip.acc.add-file-issue=Issue occurred on adding file to archive %s.\nException type: %s.\nStack trace:\n%s
+title.ntak.pearl-zip.acc.add-file-issue=Issue adding to archive
+header.ntak.pearl-zip.acc.add-file-issue=An entry could not be added to archive %s
+body.ntak.pearl-zip.acc.add-file-issue=Exception %s was thrown on the attempt to add an entry to archive. Further details can be found below.
+
+logging.ntak.pearl-zip.archive-service.create.exception=Issue adding entries to archive or creating archive %s. Message: %s
+title.ntak.pearl-zip.archive-service.create.exception=Issue creating archive
+header.ntak.pearl-zip.archive-service.create.exception=The archive %s could not be created
+body.ntak.pearl-zip.archive-service.create.exception=Exception %s was thrown on the attempt to create the archive. Further details can be found below.
+
+logging.ntak.pearl-zip.acc.delete-file-issue=Issue occurred on deleting file from archive %s.\nException type: %s.\nStack trace:\n%s
+title.ntak.pearl-zip.acc.delete-file-issue=Issue deleting archive
+header.ntak.pearl-zip.acc.delete-file-issue=An entry could not be removed from archive %s
+body.ntak.pearl-zip.acc.delete-file-issue=Exception %s was thrown on the attempt to remove an entry from the archive. Further details can be found below.
+
+
 
 ###################################################################################################
 ######################################## LABEL TEXT KEYS ##########################################
