PZ-134 | Prevent the addition of an archive within itself + Implemented logic to check and exclude archive on addition as a file or when placed within an added directory
Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -224,7 +224,10 @@ title.ntak.pearl-zip.acc.delete-file-issue=Issue deleting archive
 header.ntak.pearl-zip.acc.delete-file-issue=An entry could not be removed from archive %s
 body.ntak.pearl-zip.acc.delete-file-issue=Exception %s was thrown on the attempt to remove an entry from the archive. Further details can be found below.
 
-
+logging.ntak.pearl-zip.skip-add-self=Skipping the addition of this archive within itself...
+title.ntak.pearl-zip.skip-add-self=Skipping addition of archive in itself
+header.ntak.pearl-zip.skip-add-self=File %s will not be added
+body.ntak.pearl-zip.skip-add-self=Ignoring the addition of file %s into the archive %s
 
 ###################################################################################################
 ######################################## LABEL TEXT KEYS ##########################################
