PZ-107 | Arbitrary single file (non-tarball) compressor archive creation + Implemented functionality to create a single file archive using a compressor + Updated FXML to cater for New Single File Archive + launchMainStage() utilises Stage.toFront() rather than workaround
Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -77,6 +77,7 @@ title.ntak.pearl-zip.source-dir-location=Select source directory location for au
 title.ntak.pearl-zip.target-dir-location=Select target directory location for extraction...
 title.ntak.pearl-zip.target-archive-location=Save archive to location...
 title.ntak.pearl-zip.license-details=License Details : %s
+title.ntak.pearl-zip.select-file-to-compress=Select file to compress...
 
 ###################################################################################################
 ######################################## DIALOG TEXT KEYS #########################################
@@ -219,6 +220,17 @@ title.ntak.pearl-zip.archive-service.create.exception=Issue creating archive
 header.ntak.pearl-zip.archive-service.create.exception=The archive %s could not be created
 body.ntak.pearl-zip.archive-service.create.exception=Exception %s was thrown on the attempt to create the archive. Further details can be found below.
 
+logging.ntak.pearl-zip.archive-service.create.issue=No compatible Write Service found for the archive %s. Archive could not be created.
+title.ntak.pearl-zip.archive-service.create.issue=Issue creating archive
+header.ntak.pearl-zip.archive-service.create.issue=The archive %s could not be created
+body.ntak.pearl-zip.archive-service.create.issue=No compatible Write Service found for the archive %s.
+
+logging.ntak.pearl-zip.file-selected-does-not-exist=File %s does not exist
+title.ntak.pearl-zip.file-selected-does-not-exist=File does not exist
+header.ntak.pearl-zip.file-selected-does-not-exist=File not selected or does not exist
+body.ntak.pearl-zip.file-selected-does-not-exist=Please select a file. The file %s does not exist
+
+
 logging.ntak.pearl-zip.acc.delete-file-issue=Issue occurred on deleting file from archive %s.\nException type: %s.\nStack trace:\n%s
 title.ntak.pearl-zip.acc.delete-file-issue=Issue deleting archive
 header.ntak.pearl-zip.acc.delete-file-issue=An entry could not be removed from archive %s
@@ -264,11 +276,15 @@ new.btnCancel.text=Cancel
 new.cmp-format.text=Compression format:
 new.tabs.general.text=General
 new.description.text=Basic options for creating an archive are listed below. Press create to choose a location to save your archive:
+new.lbl-select-file.text=File to compress
+new.select-file.text=Select File...
 
 progress.title.text=Processing archive
 progress.default-loading.text=Loading...
 
 main.new.text=New
+main.new.archive.text=New Archive
+main.new.single-file-compressor.text=New Single File Archive
 main.open.text=Open
 main.add.text=Add
 main.add.file.text=Add File
@@ -323,6 +339,7 @@ about.weblink.text=:: WEB LINK ::
 
 sysmenu.file.text=File
 sysmenu.file.new.text=New
+sysmenu.file.new-single-file.text=New Single File Archive...
 sysmenu.open.text=Open
 sysmenu.recent.text=Open Recent
 sysmenu.file.save-as.text=Save As...
