PZ-107 | Arbitrary single file (non-tarball) compressor archive creation + Added TestFX unit tests for single file compressor archives + Updated initialisation routine for TestFX archive to ensure menu is initialised after services have been loaded + New Single File Compressor Archive option is disabled when there is no compressor write archive available
Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -241,6 +241,9 @@ title.ntak.pearl-zip.skip-add-self=Skipping addition of archive in itself
 header.ntak.pearl-zip.skip-add-self=File %s will not be added
 body.ntak.pearl-zip.skip-add-self=Ignoring the addition of file %s into the archive %s
 
+title.ntak.pearl-zip.no-compressor-write-services=Warning: No write service available
+body.ntak.pearl-zip.no-compressor-write-services=This functionality is disabled as no compressor write service is available.
+
 ###################################################################################################
 ######################################## LABEL TEXT KEYS ##########################################
 ###################################################################################################
