--- a/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
+++ b/pearl-zip-lang-pack-en-GB/src/main/resources/pearlzip_en_GB.properties
@@ -244,6 +244,9 @@ body.ntak.pearl-zip.skip-add-self=Ignoring the addition of file %s into the arch
 title.ntak.pearl-zip.no-compressor-write-services=Warning: No write service available
 body.ntak.pearl-zip.no-compressor-write-services=This functionality is disabled as no compressor write service is available.
 
+title.ntak.pearl-zip.clear-cache-blocked=Clear Cache Blocked
+body.ntak.pearl-zip.clear-cache-blocked=The clear cache process will be cancelled as there are some long running zip tasks in progress.
+
 ###################################################################################################
 ######################################## LABEL TEXT KEYS ##########################################
 ###################################################################################################
