PZ-143 | Zip4j Validation check on password length + Added New Archive validator logic (password length)
Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/src/main/resources/zip4j_plugin_en_GB.properties
+++ b/src/main/resources/zip4j_plugin_en_GB.properties
@@ -38,6 +38,9 @@ title.ntak.pearl-zip.zip4j.issue-extracting-file=Issue extracting archive
 header.ntak.pearl-zip.zip4j.issue-extracting-file=The archive %s could not be extracted
 body.ntak.pearl-zip.zip4j.issue-extracting-file=Exception %s was thrown on the attempt to extract from the archive. Further details can be found below.
 
+title.ntak.pearl-zip.zip4j.validation-issue=Issue validating configuration of the archive
+body.ntak.pearl-zip.zip4j.validation-issue=Issue was observed on validating state of ArchiveInfo object. Issue observed: %s
+logging.ntak.pearl-zip.zip4j.pw-length=Password length is too short. Should be > 0 characters long.
 
 ###################################################################################################
 ######################################## NEW OPTIONS FORM LABELS ##################################
