PZ-160,PZ-161,PZ-166 | Custom plugin menu items;Generic JavaFX Node hooks retrieval logic;Comment support
PZ-160:
+ Custom menu stub

PZ-161:
+ Added method to integrate with generic FX Form functionality

PZ-166:
+ Support for comment persistence and parsing

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/src/main/resources/zip4j_plugin_en_GB.properties
+++ b/src/main/resources/zip4j_plugin_en_GB.properties
@@ -57,7 +57,7 @@ zip4j.new.options.encryption.strength.text=Encryption Strength:
 zip4j.new.options.description.text=The below options will help to configure Zip4j parameters when creating, augmenting or modifying the archive.
 
 ###################################################################################################
-######################################## PASSWORD FORM LABELS ##################################
+######################################## PASSWORD FORM LABELS #####################################
 ###################################################################################################
 
 zip4j.password.description.text=The open archive is an encrypted Zip archive. \nPlease specify the password in order to decrypt and read the contents of files within the archive:
@@ -65,3 +65,10 @@ zip4j.password.continue=Continue
 zip4j.options.description.text=Below, options have been presented to configure the Zip4j library within PearlZip.
 zip4j.options.default-compression-level.text=Default Compression Level: 
 zip4j.options.default-compression-method.text=Default Compression Method: 
+
+###################################################################################################
+######################################## Zip4j Menu ###############################################
+###################################################################################################
+
+zip4j.menu-item.split-archive.text=Split Archive
+zip4j.menu-item.encrypt-archive.text=Encrypt Archive
