--- a/src/main/resources/zip4j_plugin_en_GB.properties
+++ b/src/main/resources/zip4j_plugin_en_GB.properties
@@ -51,6 +51,10 @@ logging.ntak.pearl-zip.zip4j.incompatible-encrypt=Archive %s cannot be encrypted
 title.ntak.pearl-zip.zip4j.incompatible-encrypt=Incompatible archive for encryption
 body.ntak.pearl-zip.zip4j.incompatible-encrypt=Current archive (%s) is not an archive that the Zip4J plugin can encrypt. This could be because:\n• It is not a zip archive\n• It is a temporary archive\n• Archive is already encrypted
 
+logging.ntak.pearl-zip.zip4j.incompatible-split=Archive %s cannot be split
+title.ntak.pearl-zip.zip4j.incompatible-split=Incompatible archive for split process
+body.ntak.pearl-zip.zip4j.incompatible-split=Current archive (%s) is not an archive that the Zip4J plugin can split. This could be because:\n• It is not a zip archive\n• It is an encrypted archive
+
 logging.ntak.pearl-zip.zip4j.split-archive-failed=Archive %s could not be split. Exception message: %s.
 title.ntak.pearl-zip.zip4j.split-archive-failed=ERROR: Issue splitting archive
 header.ntak.pearl-zip.zip4j.split-archive-failed=Archive %s could not be split
